Fix crash when launching nonexistant program

The crash is in a subprocess, but it will be picked up by distro bug
reporting tools like ABRT.

The problem is a bad use of g_error(), which is always fatal and so
should be reserved for programming errors.

https://bugzilla.gnome.org/show_bug.cgi?id=723509